# groupWAR

./: .gitignore  CITATION.cff  DATA_AVAILABILITY.md  README.md  REPRODUCIBILITY.md  pyproject.toml
examples/: nba_players.csv  nhl_players.csv
hockey_war/: README.md  mie368stackel.py  run_search.py  submit_search.sh
nba_war/: README.md  build_team_rosters.py  extend_headshots.py  nba_data_pull.py  nba_from_sqlite.py  nba_process.py  nba_search.py  nba_stackel.py  nba_train.py  pull_chunk1.py  pull_chunk2.py  pull_chunk3.py  pull_chunk4.py  pull_chunk5.py  submit_process.sh  submit_pull.sh  submit_search.sh  submit_train.sh
nba_war/data/: nba_apm.csv  nba_embeddings.pkl  nba_games.parquet  nba_headshots.csv  nba_lineups.parquet  nba_period_matrices.pkl  nba_period_player_dicts.pkl  nba_player_stats.csv  nba_targets.pkl
nba_war/v2/: README.md  case_studies.py  nba_process_v2.py  nba_search_v2.py  nba_train_v2.py  rapm_correlation.py
results/: README.md  results_basketball_canada_2024.csv  results_basketball_usa_2024.csv  results_evaluation_scores.csv  results_greedy_iterations.csv  results_hockey_canada_2024.csv  results_hockey_canada_2025.csv  results_model_performance.csv  results_rotation_analysis.csv  results_summary_statistics.csv  results_tournament_phase.csv  results_training_data_summary.csv
src/groupwar/: __init__.py  cli.py  data.py  scoring.py  selection.py  specs.py
src/groupwar/ml/: __init__.py  graph.py  stackelberg.py
tests/: test_cli.py  test_selection.py  test_specs.py
