[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupwar"
version = "0.1.0"
description = "Clean multi-sport groupWAR lineup optimization toolkit."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sports analytics", "roster optimization", "lineup optimization", "basketball", "hockey"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.urls]
Repository = "https://github.com/lblommesteyn/groupWAR"
Reproducibility = "https://github.com/lblommesteyn/groupWAR/blob/main/REPRODUCIBILITY.md"
Data = "https://github.com/lblommesteyn/groupWAR/blob/main/DATA_AVAILABILITY.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ml = [
    "torch>=2.4",
    "torch-geometric>=2.6",
]

[project.scripts]
groupwar = "groupwar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
